# cose-openssl

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
cose-openssl/: Cargo.toml
cose-openssl/src/: cose.rs
scripts/: san-test.sh  setup-openssl.sh  setup-rust.sh  setup-ubuntu.sh
src/: cbor.rs  cose.rs  lib.rs  ossl_wrappers.rs  sign.rs  verify.rs
