[package]
name = "cose-openssl"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[features]
pqc = []

[lints.rust]
warnings = "deny"

[dependencies]
hex = "0.4"
openssl-sys.workspace = true
cborrs-nondet = { git  = "https://github.com/maxtropets/everparse.git", branch = "f/unique-cargo-crates" }
